# RayForge-CPP-Ray-Tracing-Engine

./: .gitignore  CMakeLists.txt  README.md  _box.ray  _cone.ray  _cylinder.ray  _spherec.ray  _squarec.ray  _torus.ray  art_submission2.ray  creative.ray  creative3.ray  example.art.submission.ray  main2.cpp  submission_summary.html  test.directional.cone.ray  test.directional.cylinder.ray  test.directional.torus.ray
GL/: CMakeLists.txt
Image/: CMakeLists.txt  jpeg.cpp  lineSegments.cpp
JPEG/: CMakeLists.txt  Makefile
Ray/: CMakeLists.txt  box.cpp  box.h  box.todo.cpp  camera.todo.cpp  cone.cpp  cone.h  cone.todo.cpp  cylinder.cpp  cylinder.h  cylinder.todo.cpp  directionalLight.todo.cpp  fileInstance.cpp  fileInstance.h  pointLight.todo.cpp  scene.cpp  scene.h  scene.todo.cpp  shape.cpp  shape.h  shapeList.cpp  shapeList.h  shapeList.todo.cpp  sphere.cpp  sphere.h  sphere.todo.cpp  spotLight.todo.cpp  torus.cpp  torus.h  torus.todo.cpp  triangle.cpp  triangle.h  triangle.todo.cpp  window.cpp
SVD/Image/: Makefile  cmake_install.cmake
SVD/Ray/: Makefile  cmake_install.cmake
SVD/Util/: Makefile  cmake_install.cmake
Util/: CMakeLists.txt  cmdLineParser.inl  geometry.cpp  geometry.inl  geometry.todo.cpp  geometry.todo.inl
